--- a/public/css/biebs.css
+++ b/public/css/biebs.css
@@ -2,5 +2,7 @@
   display: none;
 }
 .grey{
- color: grey;
+ color: #A976A9;
+ font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+ font-size: 37px;
 }
