--- a/public/css/biebs.css
+++ b/public/css/biebs.css
@@ -6,3 +6,24 @@
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
  font-size: 37px;
 }
+
+div > a {
+  line-height: 13vh;
+  float: right;
+  font-size: 15px;
+}
+div > p {
+    color: #461BAB !important;
+    line-height: 13vh;
+    display: inline-block;
+    font-size: 1.5em;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-style: italic;
+    margin: 0;
+}
+
+header > div{
+  height: 13vh;
+}
