--- a/public/css/biebs.css
+++ b/public/css/biebs.css
@@ -27,3 +27,12 @@ div > p {
 header > div{
   height: 13vh;
 }
+
+@media (max-width: 768px){
+  div > p {
+    font-size: 14px;
+  }
+  div > a {
+    display: none;
+  }
+  }
