--- a/public/css/biebs.css
+++ b/public/css/biebs.css
@@ -73,6 +73,39 @@ footer {
 .maddinger{
   margin: 25px 0px;
 }
+.overlay{
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(90, 187, 255, 0.9);
+}
+.play-button {
+    height: 40px;
+    width: 65px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
+    position: fixed;
+    cursor: pointer;
+    top: 48%;
+    left: 48%;
+}
+
+.play-button:hover {
+   background-color: rgba(239, 165, 0, 0.9);
+}
+
+.play-button:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10.5px;
+    left: 24px;
+    margin: 0 auto;
+    border-style: solid;
+    border-width: 9.5px 0 9.5px 17px;
+    border-color: transparent transparent transparent rgba(255, 255, 255, 1);
+}
 @media (max-width: 568px){
   img{
     width: 100%;
